@@ -6,7 +6,7 @@ vorbis-tools 1.3.0 -- Unreleased
  * Added new en_GB.po, eo.po, pl.po, sk.po and vi.po translation files
  * Added AC_USE_SYSTEM_EXTENSIONS to configure.ac; no more configure warnings
  * Corrected SUBLANG values in intl/localename.c (#1415)
- * Modify -v to -V on oggenc and oggdec for consistency (#1112)
+ * Change -v to -V on oggenc and oggdec for consistency (#1112)
  * Fix for utf8_decode in Windows; improves behavior in vorbiscomment (#268)
  * Updated gettextize to version 0.17
  * ogg123: backported fix from libfishsound to patch the Speex decoder (#1347)
@@ -35,6 +35,7 @@ vorbis-tools 1.3.0 -- Unreleased
  * vorbiscomment: correct memory allocation (#472)
  * vorbiscomment: validate raw UTF-8 sent to vorbiscomment (#268)
  * vorbiscomment: fix segfault when using --tag (#1439)
+ * vorbiscomment: round-trip multi-line comments (#273)
 
 vorbis-tools 1.2.0 -- 2008-02-21
 
